<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.helloandroid.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:orientation="vertical"

        >


        <ImageView

            style="@style/imageViewStyle"
            android:layout_marginBottom="@dimen/margin_between"
            android:layout_marginTop="@dimen/margin_edge"
            android:contentDescription="@string/logo"
            android:src="@drawable/udacity_logo" />

        <ImageView

            style="@style/imageViewStyle"
            android:contentDescription="@string/poster"
            android:scaleType="fitXY"
            android:src="@drawable/yes_can_code_poster" />


        <TextView
            style="@style/textViewStyle"
            android:layout_marginBottom="@dimen/margin_between"
            android:layout_marginEnd="@dimen/margin_edge"
            android:layout_marginLeft="@dimen/margin_edge"
            android:layout_marginStart="@dimen/margin_edge"
            android:layout_marginTop="@dimen/margin_edge"
            android:text="@string/udacity_name_play" />

        <TextView
            style="@style/textViewStyle"
            android:layout_marginBottom="@dimen/margin_between"
            android:layout_marginEnd="@dimen/margin_edge"
            android:layout_marginLeft="@dimen/margin_edge"
            android:layout_marginStart="@dimen/margin_edge"
            android:text="@string/udacity_blog_watkins_quote" />

        <TextView
            style="@style/textViewStyle"
            android:layout_marginBottom="@dimen/margin_between"
            android:layout_marginLeft="@dimen/margin_edge"
            android:layout_marginStart="@dimen/margin_edge"
            android:drawableLeft="@drawable/ic_business_black_18dp"
            android:drawableStart="@drawable/ic_business_black_18dp"
            android:gravity="center"
            android:drawablePadding="8dp"
            android:text="@string/business" />

        <TextView
            style="@style/textViewStyle"
            android:layout_marginBottom="@dimen/margin_between"
            android:layout_marginEnd="@dimen/margin_edge"
            android:layout_marginLeft="@dimen/margin_edge"
            android:layout_marginStart="@dimen/margin_edge"
            android:drawableLeft="@drawable/ic_place_black_18dp"
            android:drawableStart="@drawable/ic_place_black_18dp"
            android:gravity="center"
            android:onClick="showMap"
            android:drawablePadding="8dp"
            android:text="@string/address" />


        <TextView
            style="@style/textViewStyle"
            android:layout_marginBottom="@dimen/margin_between"
            android:layout_marginLeft="@dimen/margin_edge"
            android:layout_marginStart="@dimen/margin_edge"
            android:drawableLeft="@drawable/ic_phone_black_18dp"
            android:drawableStart="@drawable/ic_phone_black_18dp"
            android:gravity="center"
            android:onClick="phone"
            android:drawablePadding="8dp"
            android:text="@string/phone" />

        <TextView
            style="@style/textViewStyle"
            android:layout_marginBottom="@dimen/margin_edge"
            android:layout_marginLeft="@dimen/margin_edge"
            android:layout_marginStart="@dimen/margin_edge"
            android:drawableLeft="@drawable/ic_public_black_18dp"
            android:drawableStart="@drawable/ic_public_black_18dp"
            android:gravity="center"
            android:onClick="link"
            android:drawablePadding="8dp"
            android:text="@string/web" />

    </LinearLayout>
</ScrollView>